Added color update

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,11 +35,11 @@ a{
 }
 
 a:hover {
-    color: red; 
+    color: #FFD700; 
 }
 
 .nav-menu a:hover {
-    color: red; 
+    color: #FFD700; 
 }
 
 
